Update to version 0.8.0 (#129)
List of changes:
* v0.8.0
