# app/routes/api/user/settings/index.ts
@@ -1,0 +1,8 @@
+import {Router} from 'express';
+import changePasswordRouter from './change-password';
+
+const settingsRouter = Router();
+
+settingsRouter.use('/change-password', changePasswordRouter);
+
+export default settingsRouter;
